<resources>
 <string name="app_name">TRIZ Business and Management</string>
 <string name="textsearch">Search</string>
 <string name="trizlearning">TRIZ Understanding</string>
 <string name="usecontradiction">Use Contradiction Matrix</string>
 <string name="chooselanguage">Choose Language</string>
 <string name="judul1ind">TRIZ</string>
 <string name="judul2ind">untuk</string>
 <string name="judul3ind">Bisnis dan Manajemen</string>
 <string name="trizlearningind">Memahami TRIZ</string>
 <string name="usecontradictionind">Gunakan Matriks Kontradiksi</string>
 <string name="languageind">IND</string>
 <string name="languageeng">ENG</string>
 <string name="chooselanguageind">Pilih Bahasa</string>
 <string name="learning">Understanding</string>
 <string name="whatistriz">What is TRIZ</string>
 <string name="trizforbam">How can it work in <br/> Business &amp; Management </string>
 <string name="ptriz">39 System Parameters</string>
 <string name="pstriz">40 Inventive Principles</string>
 <string name="contradictionM">Contradiction Matrix</string>
 <string name="casestudy">Case Study</string>
 <string name="judultlearning1ind">TRIZ</string>
 <string name="judultlearning2ind">Pemahaman</string>
 <string name="whatistrizind">Apa itu TRIZ</string>
 <string name="trizforbamind">Bagaimana cara kerja pada <br/> Bisnis &amp; Manajemen </string>
 <string name="ptrizind">39 Sistem Parameter</string>
 <string name="pstrizind">40 Solusi Inventif</string>
 <string name="contradictionMind">Kontradiksi Matriks</string>
 <string name="casestudyind">Studi Kasus</string>
 <string name="titlewit">What is TRIZ</string>
 <string name="subtitlewit">Teoriya Resheniya Izobretatelskikh Zadatch (TRIZ)</string>
 <string name="penjelasantrizind">\n TRIZ adalah salah satu metode yang dikenalkan oleh Genrikh Saulovich Altshuller dengan menawarkan 40 prinsipal solusi untuk mengatasi kontradiksi masalah yang terjadi dari 39 parameter yang ada.  Altshuller telah menganalisis 200.000 paten yang ada kemudian dia membuat pola solusi dari masalah-masalah yang diselesaikan oleh paten tersebut. Setelah itu, dari pola-pola yang kuat tersebut Altshuller mengumpulkannya lagi menjadi 40.000 paten.  Dari 40.000 paten dengan pola-pola kuat yang didapatkkannya ini Altshuller menyimpulkan ada variable sebab yang disebut dengan 39 sistem parameter dan variable solusi dari setiap permasalahan yang disebut dengan 40 prinsipal solusi. Oleh karena itu, Altshuller memperkenalkan metode TRIZ dengan 39 sistem parameter dan 40 Prinsipal Solusi yang sudah dikompresi dari 40.000 paten yang ada.\n TRIZ merupakan filosofi metode ilmu dan teknologi dengan cara berpikir yang sistematis dan terstruktur untuk mencari ide solusi pengembangan yang kreatif dan inovatif terhadap suatu permasalahan, sistem yang mencakup teknologi pengetahuan untuk basis data. TRIZ menyediakan prinsip-prinsip yang hebat dan alat yang konkrit untuk pemikiran kreatif dalam rangkaian teknologi.\n TRIZ juga sudah cukup banyak digunakan di berbagai dunia teknis dan non teknis di banyak industri untuk membantu dalam pembangkitan ide-ide solusi dari suatu permasalahan. TRIZ dapat digunakan dalam menciptakan produk baru untuk menghasilkan ide inovasi produk atau ide untuk membuat proses inovasi menjadi lebih efektif dan efisien seperti mengurangi biaya atau pengeluaran operasional.</string>
 <string name="penjelasantrizeng">\n TRIZ is one of the methods introduced by Genrikh Saulovich Altshuller by offering 40 principal solutions to overcome the contradictions of the problems that occur from 39 existing parameters. Altshuller has analyzed 200,000 existing patents and then he made a pattern of solutions to the problems solved by these patents. After that, from these strong patterns Altshuller collected them again into 40,000 patents. From the 40,000 patents with strong patterns that he got, Altshuller concluded that there are cause variables called 39 system parameters and solution variables for each problem called 40 principal solutions. Therefore, Altshuller introduced the TRIZ method with 39 parameter systems and 40 Solution Principals which have been compressed from 40,000 existing patents.\n TRIZ is a philosophy of science and technology method with a systematic and structured way of thinking to find creative and innovative development solution ideas to a problem, a system that includes knowledge technology for databases. TRIZ provides great principles and concrete tools for creative thinking in a range of technologies.\n  TRIZ is also widely used in various technical and business worlds in many industries to assist in the generation of solutions to problems. TRIZ can be used in creating new products to generate product innovation ideas or ideas to make the innovation process more effective and efficient such as reducing operational costs or expenses.</string>
 <string name="titletrizforbam">How can it work in <br/> Business &amp; Management </string>
 <string name="subtitletrizforbam"> TRIZ for Business &amp; Management</string>
 <string name="trizforbussiness"> TRIZ in Bussiness</string>
 <string name="trizformanajement"> TRIZ in Management</string>
 <string name="penjelasantrizforbam_eng">Are you ready to face new challenges to grow your business? Are you able to develop new breakthrough ideas that can give you an edge over the competition? TRIZ can be used to assist in developing innovative ideas for business strategies effectively and efficiently.</string>
 <string name="penjelasantrizforbisnis_eng">In an effort to generate new product introduction is a radical innovation process, Obviously the process is not efficient at all. Because very limited resources will cause very expensive costs in developing new products coupled with a high risk of success. The worst case scenario is when you find that the product is not accepted in the market. There needs to be a better way than just a trial and error brainstorming approach to generating ideas. We need to use structured and systematic tools like TRIZ to reduce the quantity of effort, while increasing the quality of ideas. This reduces time and resources for new product validation and success. Business people who can adopt this method and improve their innovation process efficiently can have a high chance to compete with competitors.</string>
 <string name="penjelasantrizformanajemen_eng">Roles in management typically involve leading and coordinating a group of people to achieve a set of goals or objectives. In the process of achieving this goal or objective, the group will very often need to tackle a range of simple to complex problems. In most cases, management problems are complex and have multiple root causes. The root causes are not easily identified and are interrelated where improvements in one area can lead to improvement but also give rise to worsening problems in different areas. This is an often overlooked contradiction. Problems with multiple root causes cannot be solved through conventional methods. it will be essential to equip the management team with sophisticated problem solving techniques such as TRIZ to solve complex problems. It has been proven that technical methodologies and tools can be borrowed and used effectively to assist in the field of management. Management teams that can solve complex problems and are able to cope with increasing complexity will have an added advantage in a globalized future.</string>
 <string name="subtitletrizforbamind"> TRIZ untuk Bisnis &amp; Manajemen</string>
 <string name="trizuntukbisnis">TRIZ untuk Bisnis</string>
 <string name="trizuntukmanajemen">TRIZ untuk Manajemen</string>
 <string name="penjelasantrizforbisnis_ind">Dalam upaya untuk menghasilkan pengenalan produk baru adalah proses inovasi radikal, Jelas prosesnya tidak efisien sama sekali. Karena sumber daya yang sangat terbatas akan menyebabkan biaya yang sangat mahal dalam mengembangan produk baru ditambah dengan risiko keberhasilan yang tinggi. Skenario kasus terburuk adalah ketika Anda menemukan bahwa produk tersebut tidak diterima di pasar. Perlu ada cara yang lebih baik dari sekedar pendekatan coba-coba brainstorming untuk menghasilkan ide. Kita perlu menggunakan alat terstruktur dan sistematis seperti TRIZ untuk mengurangi kuantitas upaya, sekaligus meningkatkan kualitas ide. Ini mengurangi waktu dan sumber daya untuk validasi dan kesuksesan produk baru. Para pelaku bisnis yang dapat mengadopsi metode ini dan meningkatkan proses inovasi mereka secara efisien dapat memiliki peluang yang tinggi untuk bersaing dengan pesaing.</string>
 <string name="penjelasantrizformanajemen_ind">Peran dalam manajemen biasanya melibatkan memimpin dan mengoordinasikan sekelompok orang untuk mencapai serangkaian tujuan atau sasaran. Dalam proses mencapai tujuan atau sasaran ini, kelompok akan sangat sering perlu menangani berbagai masalah sederhana hingga kompleks. Dalam kebanyakan kasus, masalah manajemen bersifat kompleks dan disebabkan oleh berbagai akar penyebab. Akar penyebab tidak mudah diidentifikasi dan saling terkait di mana perbaikan di satu area dapat mengarah pada perbaikan tetapi juga menimbulkan masalah yang memburuk di area yang berbeda. Ini adalah kontradiksi yang sering diabaikan. Masalah dengan banyak akar penyebab tidak dapat diselesaikan melalui metode konvensional. akan sangat penting untuk melengkapi tim manajemen dengan teknik pemecahan masalah yang canggih seperti TRIZ untuk menyelesaikan masalah yang kompleks. Telah terbukti bahwa metodologi dan alat teknis dapat dipinjam dan digunakan secara efektif untuk membantu di bidang manajemen. Tim manajemen yang dapat memecahkan masalah yang kompleks dan mampu mengatasi kompleksitas yang meningkat akan memiliki keuntungan tambahan di masa depan yang terglobalisasi.</string>
 <string name="penjelasantrizforbam_ind">Apakah anda siap menghadapi tantangan baru untuk mengembangkan bisnis anda? Apakah anda mampu mengembangkan ide-ide terobosan baru yang dapat memberi anda keunggulan terhadap persaingan? TRIZ dapat digunakan untuk membantu dalam hal pengembangan ide inovasi terhadap strategi bisnis secara efektif dan efisien. </string>
 <string name="title39parameters"> 39 System Parameters</string>
 <string name="textparameters">39 Parameters</string>
 <string name="p1text">Weight of moving object</string>
 <string name="p2text">Weight of stationary object</string>
 <string name="p3text">Length of moving object</string>
 <string name="p4text">Length of stationary object</string>
 <string name="p5text">Area of moving object</string>
 <string name="p6text">Area of stationary object</string>
 <string name="p7text">Volume of moving object</string>
 <string name="p8text">Volume of stationary object</string>
 <string name="p9text">Speed</string>
 <string name="p10text">Force</string>
 <string name="p11text">Stress or pressure</string>
 <string name="p12text">Shape</string>
 <string name="p13text">Stability of the object ’s composition</string>
 <string name="p14text">Strength</string>
 <string name="p15text">Duration of action by a moving object</string>
 <string name="p16text">Duration of action by a stationary object</string>
 <string name="p17text">Temperature</string>
 <string name="p18text">Illumination intensity</string>
 <string name="p19text">Use of energy by moving object</string>
 <string name="p20text">Use of energy by stationary object</string>
 <string name="p21text">Power</string>
 <string name="p22text">Loss of Energy</string>
 <string name="p23text">Loss of substance</string>
 <string name="p24text">Loss of Information</string>
 <string name="p25text">Loss of Time</string>
 <string name="p26text">Quantity of substance/the matter</string>
 <string name="p27text">Reliability</string>
 <string name="p28text">Measurement accuracy</string>
 <string name="p29text">Manufacturing precision</string>
 <string name="p30text">External harm affects the object</string>
 <string name="p31text">Object - generated harmful factors</string>
</resources>