<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context="com.example.projectfrontend.classTrizforBAM.trizforbamActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativetrizforbam1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/komponenkotaktrizbam"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/kotakhome" />

                <TextView
                    android:id="@+id/judultrizforbam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="80dp"
                    android:fontFamily="@font/poppins_semib"
                    android:gravity="center"
                    android:text="@string/titletrizforbam"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/komponenGariswit1"
                    android:layout_width="160dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/judultrizforbam"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/stroke"
                    android:backgroundTint="@color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativetrizforbam2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativetrizforbam1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true">

                <TextView
                    android:id="@+id/subjudultrizforbam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_semib"
                    android:gravity="center_horizontal"
                    android:text="@string/subtitletrizforbam"
                    android:textColor="#121212"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/komponenGariswit2"
                    android:background="@drawable/stroke"
                    android:backgroundTint="@color/black"
                    android:layout_below="@+id/subjudultrizforbam"
                    android:layout_alignRight="@id/subjudultrizforbam"
                    android:layout_alignLeft="@id/subjudultrizforbam"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="70dp"
                    android:layout_marginLeft="70dp"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"/>

                <TextView
                    android:id="@+id/penjelasantrizforbam"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/komponenGariswit2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/popins_reguler"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="2dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="12dp"
                    android:text="@string/penjelasantrizforbam_eng"
                    android:textColor="#121212"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/trizbisnis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/penjelasantrizforbam"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_semib"
                    android:gravity="center_horizontal"
                    android:text="@string/trizforbussiness"
                    android:textColor="#121212"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/komponenGariswit3"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_below="@id/trizbisnis"
                    android:layout_alignLeft="@id/trizbisnis"
                    android:layout_alignRight="@id/trizbisnis"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:background="@drawable/stroke"
                    android:backgroundTint="@color/black" />

                <TextView
                    android:id="@+id/penjelasantrizbisnis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/komponenGariswit3"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/popins_reguler"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="2dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="12dp"
                    android:text="@string/penjelasantrizforbisnis_eng"
                    android:textColor="#121212"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/trizmanajemen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/penjelasantrizbisnis"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_semib"
                    android:gravity="center_horizontal"
                    android:text="@string/trizformanajement"
                    android:textColor="#121212"
                    android:textSize="14dp" />

                <ImageView
                    android:id="@+id/komponenGariswit4"
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_below="@id/trizmanajemen"
                    android:layout_alignRight="@id/trizmanajemen"
                    android:layout_alignLeft="@id/trizmanajemen"
                    android:background="@drawable/stroke"
                    android:backgroundTint="@color/black"
                    android:layout_marginRight="35dp"
                    android:layout_marginLeft="35dp"/>

                <TextView
                    android:id="@+id/penjelasantrizmanajemen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/komponenGariswit4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/popins_reguler"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="2dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingBottom="12dp"
                    android:text="@string/penjelasantrizformanajemen_eng"
                    android:textColor="#121212"
                    android:textSize="12dp" />




            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>