<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context="com.example.projectfrontend.classWhatIsTriz.whatistrizActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relative1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/komponenkotakwit"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/kotakhome" />

            <TextView
                android:id="@+id/judulwhatistriz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_semib"
                android:gravity="center"
                android:text="@string/titlewit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/komponenGariswit1"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_below="@id/judulwhatistriz"
                android:layout_alignRight="@id/judulwhatistriz"
                android:layout_alignLeft="@id/judulwhatistriz"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/stroke"
                android:backgroundTint="@color/white"/>
        </RelativeLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/relative1"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/subjudulwit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_semib"
                android:text="@string/subtitlewit"
                android:textColor="#121212"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/komponenGariswit2"
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_below="@+id/subjudulwit"
                android:layout_alignLeft="@id/subjudulwit"
                android:layout_alignRight="@id/subjudulwit"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"

                android:background="@drawable/stroke"
                android:backgroundTint="@color/black" />

            <TextView
                android:id="@+id/penjelasantriz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/komponenGariswit2"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/popins_reguler"
                android:justificationMode="inter_word"
                android:lineSpacingExtra="2dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingBottom="12dp"
                android:text="@string/penjelasantrizeng"
                android:textColor="#121212"
                android:textSize="12dp" />
        </RelativeLayout>
    </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>